@@ -1,3 +1,7 @@
+Tue Jun 19 19:44:53 CEST 2012
+	Change various uses of time(NULL) to new MHD_monotonic_time() function to
+	make timeouts immune to the system real time clock changing. -MC
+
 Tue Jun 12 21:35:00 CEST 2012
 	Adding 451 status code. -CG
 
